@@ -1,21 +1,17 @@
 package link.locutus.discord.commands.rankings;
 
 import link.locutus.discord.Locutus;
+import link.locutus.discord.apiv1.domains.subdomains.DBAttack;
 import link.locutus.discord.commands.manager.Command;
 import link.locutus.discord.commands.manager.CommandCategory;
 import link.locutus.discord.config.Settings;
 import link.locutus.discord.db.entities.DBNation;
 import link.locutus.discord.util.TimeUtil;
 import link.locutus.discord.util.discord.DiscordUtil;
-import link.locutus.discord.util.MathMan;
-import link.locutus.discord.apiv1.domains.subdomains.DBAttack;
 import net.dv8tion.jda.api.entities.Guild;
-import net.dv8tion.jda.api.entities.Message;
 import net.dv8tion.jda.api.entities.User;
 import net.dv8tion.jda.api.events.message.MessageReceivedEvent;
 
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.List;
@@ -29,6 +25,7 @@ public class NationLootRanking extends Command {
     public NationLootRanking() {
         super(CommandCategory.GAME_INFO_AND_TOOLS, CommandCategory.MILCOM);
     }
+
     @Override
     public String help() {
         return Settings.commandPrefix(true) + "NationLootRanking <alliances|coalitions|*> <days>";
@@ -64,7 +61,7 @@ public class NationLootRanking extends Command {
             }
         }
 
-        List<Map.Entry<Integer, Double>> sorted = totals.entrySet().stream().sorted((o1, o2) -> -Double.compare(o1.getValue(), o2.getValue())).collect(Collectors.toList());
+        List<Map.Entry<Integer, Double>> sorted = totals.entrySet().stream().sorted((o1, o2) -> -Double.compare(o1.getValue(), o2.getValue())).toList();
 
         String title = args.get(0) + " Looted from nations (" + diffStr + "):";
         StringBuilder response = new StringBuilder();
@@ -78,11 +75,11 @@ public class NationLootRanking extends Command {
             String name = nation == null ? Integer.toString(nationId) : nation.getNation();
             name = name.substring(0, Math.min(32, name.length()));
 
-            response.append('\n').append(String.format("%4s", i + 1) + ". ").append(String.format("%32s", name)).append(": $").append(format(value));
+            response.append('\n').append(String.format("%4s", i + 1)).append(". ").append(String.format("%32s", name)).append(": $").append(format(value));
         }
 
         String emoji = "Refresh";
-        response.append("\n\nPress `" + emoji + "` to refresh");
+        response.append("\n\nPress `").append(emoji).append("` to refresh");
         DiscordUtil.createEmbedCommand(event.getChannel(), title, response.toString(), emoji, DiscordUtil.trimContent(event.getMessage().getContentRaw()));
 
         return null;
